--- a/res/layout/compose_message_activity.xml
+++ b/res/layout/compose_message_activity.xml
@@ -127,6 +127,15 @@
                 android:layout_height="wrap_content"
                 android:background="#fff" >
 
+                <ImageButton
+                    android:id="@+id/add_emoji"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:src="@drawable/emo_im_pokerface"
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dip"
+                    android:visibility="gone" />
+
                 <EditText
                     android:textColor="@android:color/black"
                     android:id="@+id/embedded_text_editor"
