--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -59,7 +59,7 @@
 	<!-- New Background colors from layouts to make theme chooser apk easier to theme -->
 	<color name="background">#ffffff</color>
 	<color name="darkgray_backgrounds">#666666</color>
-	<color name="dividers">#eeeeee</color>
+	<color name="dividers">#202020</color>
 	<color name="transparent">#00000000</color>
 
 </resources>
